# monopd-ita

./: API  AUTHORS  ChangeLog  ChangeLog.network  Makefile.am  NEWS  README  README.metaserver  README.monopigator  TODO  autogen.sh  clean_monopd  configure.ac
conf/: Makefile.am  monopd.conf-dist
doc/: Makefile.am
doc/api/: Makefile.am  gameboard
doc/systemd/: Makefile.am  monopd.service  monopd.socket
games/: Makefile.am  atlantic.conf  city.conf
src/: Makefile.am  auction.cpp  auction.h  card.cpp  card.h  cardgroup.cpp  cardgroup.h  const.h  debt.cpp  debt.h  display.cpp  display.h  estate.cpp  estate.h  estategroup.cpp  estategroup.h  event.cpp  event.h  game.cpp  game.h  gameconfig.cpp  gameconfig.h  gameobject.cpp  gameobject.h  gameproperty.cpp  gameproperty.h  io.cpp  io.h  listener.cpp  listener.h  listenport.cpp  listenport.h  main.cpp  main.h  player.cpp  player.h  server.cpp  server.h  socket.cpp  socket.h  (+4 more)
